api: use formatted strings instead of string concatenations
Signed-off-by: Tan Siewert <tan@siewert.io>