@@ -162,7 +162,7 @@ public class HetznerCloudAPI {
     @Deprecated
     public ActionsResponse getActions(ActionStatus actionStatus, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/actions")
+                UrlBuilder.from("%s/actions".formatted(apiUrl))
                         .queryParamIfPresent("status", Optional.ofNullable(actionStatus))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -178,7 +178,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse getAction(long id) {
         return get(
-                apiUrl + "/actions/" + id,
+                "%s/actions/%s".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -210,7 +210,7 @@ public class HetznerCloudAPI {
      */
     public ServersResponse getServers(String labelSelector, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/servers")
+                UrlBuilder.from("%s/servers".formatted(apiUrl))
                         .queryParamIfPresent("label_selector", Optional.ofNullable(labelSelector))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -226,7 +226,7 @@ public class HetznerCloudAPI {
      */
     public ServersResponse getServer(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/servers")
+                UrlBuilder.from("%s/servers".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 ServersResponse.class);
@@ -240,7 +240,7 @@ public class HetznerCloudAPI {
      */
     public ServerResponse getServer(long id) {
         return get(
-                apiUrl + "/servers/" + id,
+                "%s/servers/%s".formatted(apiUrl, id),
                 ServerResponse.class);
     }
 
@@ -253,7 +253,7 @@ public class HetznerCloudAPI {
     public CreateServerResponse createServer(CreateServerRequest createServerRequest) {
         createServerRequest.setServerType(createServerRequest.getServerType().toLowerCase());   // Case-sensitive fix
         return post(
-                apiUrl + "/servers",
+                "%s/servers".formatted(apiUrl),
                 createServerRequest,
                 CreateServerResponse.class);
     }
@@ -266,7 +266,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse deleteServer(long id) {
         return delete(
-                apiUrl + "/servers/" + id,
+                "%s/servers/%s".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -279,7 +279,7 @@ public class HetznerCloudAPI {
      */
     public ServerResponse updateServer(long id, UpdateServerRequest updateServerRequest) {
         return put(
-                apiUrl + "/servers/" + id,
+                "%s/servers/%s".formatted(apiUrl, id),
                 updateServerRequest,
                 ServerResponse.class);
     }
@@ -292,7 +292,7 @@ public class HetznerCloudAPI {
      */
     public ConsoleResponse requestConsole(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/request_console",
+                "%s/servers/%s/actions/request_console".formatted(apiUrl, id),
                 ConsoleResponse.class);
     }
 
@@ -305,7 +305,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeServerProtection(long id, ChangeProtectionRequest changeProtection) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/change_protection",
+                "%s/servers/%s/actions/change_protection".formatted(apiUrl, id),
                 changeProtection,
                 ActionResponse.class);
     }
@@ -320,7 +320,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse addServerToPlacementGroup(long serverId, long placementGroupId) {
         return post(
-                apiUrl + "/servers/" + serverId + "/actions/add_to_placement_group",
+                "%s/servers/%s/actions/add_to_placement_group".formatted(apiUrl, serverId),
                 new PlacementGroupAddServerRequest(placementGroupId),
                 ActionResponse.class);
     }
@@ -333,7 +333,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse removeServerFromPlacementGroup(long serverId) {
         return post(
-                apiUrl + "/servers/" + serverId + "/actions/remove_from_placement_group",
+                "%s/servers/%s/actions/remove_from_placement_group".formatted(apiUrl, serverId),
                 ActionResponse.class);
     }
 
@@ -345,7 +345,7 @@ public class HetznerCloudAPI {
      */
     public ActionsResponse getServerActions(long id) {
         return get(
-                apiUrl + "/servers/" + id + "/actions",
+                "%s/servers/%s/actions".formatted(apiUrl, id),
                 ActionsResponse.class);
     }
 
@@ -356,7 +356,7 @@ public class HetznerCloudAPI {
      * @return ActionsResponse object
      */
     public ActionsResponse getFloatingIPActions(long id) {
-        return get(apiUrl + "/floating_ips/" + id + "/actions",
+        return get("%s/floating_ips/%s/actions".formatted(apiUrl, id),
                 ActionsResponse.class);
     }
 
@@ -368,7 +368,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse powerOnServer(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/poweron",
+                "%s/servers/%s/actions/poweron".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -380,7 +380,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse powerOffServer(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/poweroff",
+                "%s/servers/%s/actions/poweroff".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -392,7 +392,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse rebootServer(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/reboot",
+                "%s/servers/%s/actions/reboot".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -404,7 +404,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse resetServer(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/reset",
+                "%s/servers/%s/actions/reset".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -416,7 +416,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse shutdownServer(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/shutdown",
+                "%s/servers/%s/actions/shutdown".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -428,7 +428,7 @@ public class HetznerCloudAPI {
      */
     public ResetRootPasswordResponse resetRootPassword(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/reset_password",
+                "%s/servers/%s/actions/reset_password".formatted(apiUrl, id),
                 ResetRootPasswordResponse.class);
     }
 
@@ -440,7 +440,7 @@ public class HetznerCloudAPI {
      */
     public EnableRescueResponse enableRescue(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/enable_rescue",
+                "%s/servers/%s/actions/enable_rescue".formatted(apiUrl, id),
                 EnableRescueResponse.class);
     }
 
@@ -453,7 +453,7 @@ public class HetznerCloudAPI {
      */
     public EnableRescueResponse enableRescue(long id, EnableRescueRequest enableRescueRequest) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/enable_rescue",
+                "%s/servers/%s/actions/enable_rescue".formatted(apiUrl, id),
                 enableRescueRequest,
                 EnableRescueResponse.class);
     }
@@ -468,7 +468,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse disableRescue(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/disable_rescue",
+                "%s/servers/%s/actions/disable_rescue".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -483,7 +483,7 @@ public class HetznerCloudAPI {
      */
     public RebuildServerResponse rebuildServer(long id, RebuildServerRequest rebuildServerRequest) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/rebuild",
+                "%s/servers/%s/actions/rebuild".formatted(apiUrl, id),
                 rebuildServerRequest,
                 RebuildServerResponse.class);
     }
@@ -499,7 +499,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeServerType(long id, ChangeTypeRequest changeTypeRequest) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/change_type",
+                "%s/servers/%s/actions/change_type".formatted(apiUrl, id),
                 changeTypeRequest,
                 ActionResponse.class);
     }
@@ -516,7 +516,7 @@ public class HetznerCloudAPI {
     public MetricsResponse getServerMetrics(long id, String metricType, String start, String end) {
         return get(
                 UrlBuilder.from(
-                        apiUrl + "/servers/" + id + "/metrics")
+                        "%s/servers/%s/metrics".formatted(apiUrl, id))
                         .queryParam("type", metricType)
                         .queryParam("start", start)
                         .queryParam("end", end)
@@ -533,7 +533,7 @@ public class HetznerCloudAPI {
      */
     public CreateImageResponse createImage(long id, CreateImageRequest createImageRequest) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/create_image",
+                "%s/servers/%s/actions/create_image".formatted(apiUrl, id),
                 createImageRequest,
                 CreateImageResponse.class);
     }
@@ -548,7 +548,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeImageProtection(long id, ChangeProtectionRequest protectionRequest) {
         return post(
-                apiUrl + "/images/" + id + "/actions/change_protection",
+                "%s/images/%s/actions/change_protection".formatted(apiUrl, id),
                 protectionRequest,
                 ActionResponse.class);
     }
@@ -563,7 +563,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse enableBackup(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/enable_backup",
+                "%s/servers/%s/actions/enable_backup".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -605,7 +605,7 @@ public class HetznerCloudAPI {
      */
     public ISOSResponse getISOS(Architecture architecture, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/isos")
+                UrlBuilder.from("%s/isos".formatted(apiUrl))
                         .queryParamIfPresent("architecture", Optional.ofNullable(architecture))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -621,7 +621,7 @@ public class HetznerCloudAPI {
      */
     public ISOResponse getISO(long id) {
         return get(
-                apiUrl + "/isos/" + id,
+                "%s/isos/%s".formatted(apiUrl, id),
                 ISOResponse.class);
     }
 
@@ -636,7 +636,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse attachISO(long id, AttachISORequest attachISORequest) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/attach_iso",
+                "%s/servers/%s/actions/attach_iso".formatted(apiUrl, id),
                 attachISORequest,
                 ActionResponse.class);
     }
@@ -649,7 +649,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse detachISO(long id) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/detach_iso",
+                "%s/servers/%s/actions/detach_iso".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -664,7 +664,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeDNSPTR(long id, ChangeReverseDNSRequest changeReverseDNSRequest) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/change_dns_ptr",
+                "%s/servers/%s/actions/change_dns_ptr".formatted(apiUrl, id),
                 changeReverseDNSRequest,
                 ActionResponse.class);
     }
@@ -677,7 +677,7 @@ public class HetznerCloudAPI {
      */
     public DatacenterResponse getDatacenter(long id) {
         return get(
-                apiUrl + "/datacenters/" + id,
+                "%s/datacenters/%s".formatted(apiUrl, id),
                 DatacenterResponse.class);
     }
 
@@ -688,7 +688,7 @@ public class HetznerCloudAPI {
      */
     public DatacentersResponse getDatacenters() {
         return get(
-                apiUrl + "/datacenters",
+                "%s/datacenters".formatted(apiUrl),
                 DatacentersResponse.class);
     }
 
@@ -700,7 +700,7 @@ public class HetznerCloudAPI {
      */
     public DatacentersResponse getDatacenter(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/datacenters")
+                UrlBuilder.from("%s/datacenters".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 DatacentersResponse.class);
@@ -746,7 +746,7 @@ public class HetznerCloudAPI {
      */
     public FirewallsResponse getFirewalls(String labelSelector, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/firewalls")
+                UrlBuilder.from("%s/firewalls".formatted(apiUrl))
                         .queryParamIfPresent("label_selector", Optional.ofNullable(labelSelector))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -762,7 +762,7 @@ public class HetznerCloudAPI {
      */
     public CreateFirewallResponse createFirewall(CreateFirewallRequest createFirewallRequest) {
         return post(
-                apiUrl + "/firewalls",
+                "%s/firewalls".formatted(apiUrl),
                 createFirewallRequest,
                 CreateFirewallResponse.class);
     }
@@ -774,7 +774,7 @@ public class HetznerCloudAPI {
      */
     public void deleteFirewall(long id) {
         delete(
-                apiUrl + "/firewalls/" + id,
+                "%s/firewalls/%s".formatted(apiUrl, id),
                 String.class);
     }
 
@@ -786,7 +786,7 @@ public class HetznerCloudAPI {
      */
     public CreateFirewallResponse getFirewall(long id) {
         return get(
-                apiUrl + "/firewalls/" + id,
+                "%s/firewalls/%s".formatted(apiUrl, id),
                 CreateFirewallResponse.class);
     }
 
@@ -799,7 +799,7 @@ public class HetznerCloudAPI {
      */
     public CreateFirewallResponse updateFirewall(long id, UpdateFirewallRequest updateFirewallRequest) {
         return put(
-                apiUrl + "/firewalls/" + id,
+                "%s/firewalls/%s".formatted(apiUrl, id),
                 updateFirewallRequest,
                 CreateFirewallResponse.class);
     }
@@ -812,7 +812,7 @@ public class HetznerCloudAPI {
      */
     public ActionsResponse getFirewallActions(long id) {
         return get(
-                String.format("%s/firewalls/%s/actions", apiUrl, id),
+                "%s/firewalls/%s/actions".formatted(apiUrl, id),
                 ActionsResponse.class);
     }
 
@@ -825,7 +825,7 @@ public class HetznerCloudAPI {
      */
     public ActionsResponse applyFirewallToResources(long id, List<FWApplicationTarget> applicationTargets) {
         return post(
-                apiUrl + "/firewalls/" + id + "/actions/apply_to_resources",
+                "%s/firewalls/%s/actions/apply_to_resources".formatted(apiUrl, id),
                 Map.of("apply_to", applicationTargets),
                 ActionsResponse.class);
     }
@@ -839,7 +839,7 @@ public class HetznerCloudAPI {
      */
     public ActionsResponse removeFirewallFromResources(long id, List<FWApplicationTarget> removalTargets) {
         return post(
-                apiUrl + "/firewalls/" + id + "/actions/remove_from_resources",
+                "%s/firewalls/%s/actions/remove_from_resources".formatted(apiUrl, id),
                 Map.of("remove_from", removalTargets),
                 ActionsResponse.class);
     }
@@ -865,7 +865,7 @@ public class HetznerCloudAPI {
      */
     public ActionsResponse setFirewallRules(long id, List<FirewallRule> firewallRules) {
         return post(
-                apiUrl + "/firewalls/" + id + "/actions/set_rules",
+                "%s/firewalls/%s/actions/set_rules".formatted(apiUrl, id),
                 Map.of("rules", firewallRules),
                 ActionsResponse.class);
     }
@@ -877,7 +877,7 @@ public class HetznerCloudAPI {
      */
     public PricingResponse getPricing() {
         return get(
-                apiUrl + "/pricing",
+                "%s/pricing".formatted(apiUrl),
                 PricingResponse.class);
     }
 
@@ -909,7 +909,7 @@ public class HetznerCloudAPI {
      */
     public PrimaryIPsResponse getPrimaryIPs(String labelSelector, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/primary_ips")
+                UrlBuilder.from("%s/primary_ips".formatted(apiUrl))
                         .queryParamIfPresent("label_selector", Optional.ofNullable(labelSelector))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -925,7 +925,7 @@ public class HetznerCloudAPI {
      */
     public PrimaryIPsResponse getPrimaryIPByName(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/primary_ips")
+                UrlBuilder.from("%s/primary_ips".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 PrimaryIPsResponse.class);
@@ -939,7 +939,7 @@ public class HetznerCloudAPI {
      */
     public PrimaryIPsResponse getPrimaryIP(String ip) {
         return get(
-                UrlBuilder.from(apiUrl + "/primary_ips")
+                UrlBuilder.from("%s/primary_ips".formatted(apiUrl))
                         .queryParam("ip", ip)
                         .toUri(),
                 PrimaryIPsResponse.class);
@@ -953,7 +953,7 @@ public class HetznerCloudAPI {
      */
     public PrimaryIPResponse getPrimaryIP(long id) {
         return get(
-                apiUrl + "/primary_ips/" + id,
+                "%s/primary_ips/%s".formatted(apiUrl, id),
                 PrimaryIPResponse.class);
     }
 
@@ -965,7 +965,7 @@ public class HetznerCloudAPI {
      */
     public CreatePrimaryIPResponse createPrimaryIP(CreatePrimaryIPRequest createPrimaryIPRequest) {
         return post(
-                apiUrl + "/primary_ips",
+                "%s/primary_ips".formatted(apiUrl),
                 createPrimaryIPRequest,
                 CreatePrimaryIPResponse.class);
     }
@@ -977,7 +977,7 @@ public class HetznerCloudAPI {
      */
     public PrimaryIPResponse updatePrimaryIP(long id, UpdatePrimaryIPRequest updatePrimaryIPRequest) {
         return put(
-                apiUrl + "/primary_ips/" + id,
+                "%s/primary_ips/%s".formatted(apiUrl, id),
                 updatePrimaryIPRequest,
                 PrimaryIPResponse.class);
     }
@@ -991,7 +991,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse assignPrimaryIP(long id, AssignPrimaryIPRequest assignPrimaryIPRequest) {
         return post(
-                apiUrl + "/primary_ips/" + id + "/actions/assign",
+                "%s/primary_ips/%s/actions/assign".formatted(apiUrl, id),
                 assignPrimaryIPRequest,
                 ActionResponse.class);
     }
@@ -1004,7 +1004,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse unassignPrimaryIP(long id) {
         return post(
-                apiUrl + "/primary_ips/" + id + "/actions/unassign",
+                "%s/primary_ips/%s/actions/unassign".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -1017,14 +1017,14 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changePrimaryIPReverseDNS(long id, ChangeReverseDNSRequest changeReverseDNSRequest) {
         return post(
-                apiUrl + "/primary_ips/" + id + "/actions/change_dns_ptr",
+                "%s/primary_ips/%s/actions/change_dns_ptr".formatted(apiUrl, id),
                 changeReverseDNSRequest,
                 ActionResponse.class);
     }
 
     public ActionResponse changePrimaryIPProtection(long id, ChangeProtectionRequest changeProtectionRequest) {
         return post(
-                apiUrl + "/primary_ips/" + id + "/actions/change_protection",
+                "%s/primary_ips/%s/actions/change_protection".formatted(apiUrl, id),
                 changeProtectionRequest,
                 ActionResponse.class);
     }
@@ -1037,7 +1037,7 @@ public class HetznerCloudAPI {
      */
     public String deletePrimaryIP(Long id) {
         return delete(
-                apiUrl + "/primary_ips/" + id,
+                "%s/primary_ips/%s".formatted(apiUrl, id),
                 String.class);
     }
 
@@ -1081,7 +1081,7 @@ public class HetznerCloudAPI {
      */
     public FloatingIPsResponse getFloatingIPs(String labelSelector, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/floating_ips")
+                UrlBuilder.from("%s/floating_ips".formatted(apiUrl))
                         .queryParamIfPresent("label_selector", Optional.ofNullable(labelSelector))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -1097,7 +1097,7 @@ public class HetznerCloudAPI {
      */
     public FloatingIPResponse getFloatingIP(long id) {
         return get(
-                apiUrl + "/floating_ips/" + id,
+                "%s/floating_ips/%s".formatted(apiUrl, id),
                 FloatingIPResponse.class);
     }
 
@@ -1109,7 +1109,7 @@ public class HetznerCloudAPI {
      */
     public CreateFloatingIPResponse createFloatingIP(CreateFloatingIPRequest createFloatingIPRequest) {
         return post(
-                apiUrl + "/floating_ips",
+                "%s/floating_ips".formatted(apiUrl),
                 createFloatingIPRequest,
                 CreateFloatingIPResponse.class);
     }
@@ -1123,7 +1123,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeFloatingIPProtection(long id, ChangeProtectionRequest protectionRequest) {
         return post(
-                apiUrl + "/floating_ips/" + id + "/actions/change_protection",
+                "%s/floating_ips/%s/actions/change_protection".formatted(apiUrl, id),
                 protectionRequest,
                 ActionResponse.class);
     }
@@ -1137,7 +1137,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse assignFloatingIP(long id, AssignFloatingIPRequest assignFloatingIPRequest) {
         return post(
-                apiUrl + "/floating_ips/" + id + "/actions/assign",
+                "%s/floating_ips/%s/actions/assign".formatted(apiUrl, id),
                 assignFloatingIPRequest,
                 ActionResponse.class);
     }
@@ -1150,7 +1150,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse unassignFloatingIP(long id) {
         return post(
-                apiUrl + "/floating_ips/" + id + "/actions/unassign",
+                "%s/floating_ips/%s/actions/unassign".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -1163,7 +1163,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeFloatingReverseDNS(long id, ChangeReverseDNSRequest changeReverseDNSRequest) {
         return post(
-                apiUrl + "/floating_ips/" + id + "/actions/change_dns_ptr",
+                "%s/floating_ips/%s/actions/change_dns_ptr".formatted(apiUrl, id),
                 changeReverseDNSRequest,
                 ActionResponse.class);
     }
@@ -1178,7 +1178,7 @@ public class HetznerCloudAPI {
      */
     public String deleteFloatingIP(long id) {
         return delete(
-                apiUrl + "/floating_ips/" + id,
+                "%s/floating_ips/%s".formatted(apiUrl, id),
                 String.class);
     }
 
@@ -1191,7 +1191,7 @@ public class HetznerCloudAPI {
      */
     public CreateFloatingIPResponse updateFloatingIP(long id, UpdateFloatingIPRequest updateFloatingIPRequest) {
         return put(
-                apiUrl + "/floating_ips/" + id,
+                "%s/floating_ips/%s".formatted(apiUrl, id),
                 updateFloatingIPRequest,
                 CreateFloatingIPResponse.class);
     }
@@ -1234,7 +1234,7 @@ public class HetznerCloudAPI {
      */
     public SSHKeysResponse getSSHKeys(String labelSelector, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/ssh_keys")
+                UrlBuilder.from("%s/ssh_keys".formatted(apiUrl))
                         .queryParamIfPresent("label_selector", Optional.ofNullable(labelSelector))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -1250,7 +1250,7 @@ public class HetznerCloudAPI {
      */
     public SSHKeyResponse getSSHKey(long id) {
         return get(
-                apiUrl + "/ssh_keys/" + id,
+                "%s/ssh_keys/%s".formatted(apiUrl, id),
                 SSHKeyResponse.class);
     }
 
@@ -1262,7 +1262,7 @@ public class HetznerCloudAPI {
      */
     public SSHKeysResponse getSSHKey(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/ssh_keys")
+                UrlBuilder.from("%s/ssh_keys".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 SSHKeysResponse.class);
@@ -1276,7 +1276,7 @@ public class HetznerCloudAPI {
      */
     public SSHKeysResponse getSSHKeyByFingerprint(String fingerprint) {
         return get(
-                UrlBuilder.from(apiUrl + "/ssh_keys")
+                UrlBuilder.from("%s/ssh_keys".formatted(apiUrl))
                         .queryParam("fingerprint", fingerprint)
                         .toUri(),
                 SSHKeysResponse.class);
@@ -1290,7 +1290,7 @@ public class HetznerCloudAPI {
      */
     public SSHKeyResponse createSSHKey(CreateSSHKeyRequest createSshKeyRequest) {
         return post(
-                apiUrl + "/ssh_keys",
+                "%s/ssh_keys".formatted(apiUrl),
                 createSshKeyRequest,
                 SSHKeyResponse.class);
     }
@@ -1304,7 +1304,7 @@ public class HetznerCloudAPI {
      */
     public SSHKeyResponse updateSSHKey(long id, UpdateSSHKeyRequest updateSSHKeyRequest) {
         return put(
-                apiUrl + "/ssh_keys/" + id,
+                "%s/ssh_keys/%s".formatted(apiUrl, id),
                 updateSSHKeyRequest,
                 SSHKeyResponse.class);
     }
@@ -1319,7 +1319,7 @@ public class HetznerCloudAPI {
      */
     public String deleteSSHKey(long id) {
         return delete(
-                apiUrl + "/ssh_keys/" + id,
+                "%s/ssh_keys/%s".formatted(apiUrl, id),
                 String.class);
     }
 
@@ -1330,7 +1330,7 @@ public class HetznerCloudAPI {
      */
     public ServerTypesResponse getServerTypes() {
         return get(
-                apiUrl + "/server_types",
+                "%s/server_types".formatted(apiUrl),
                 ServerTypesResponse.class);
     }
 
@@ -1341,7 +1341,7 @@ public class HetznerCloudAPI {
      */
     public ServerTypesResponse getServerTypes(PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/server_types")
+                UrlBuilder.from("%s/server_types".formatted(apiUrl))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
                         .toUri(),
@@ -1355,7 +1355,7 @@ public class HetznerCloudAPI {
      */
     public LoadBalancerTypesResponse getLoadBalancerTypes() {
         return get(
-                apiUrl + "/load_balancer_types",
+                "%s/load_balancer_types".formatted(apiUrl),
                 LoadBalancerTypesResponse.class);
     }
 
@@ -1367,7 +1367,7 @@ public class HetznerCloudAPI {
      */
     public LoadBalancerTypesResponse getLoadBalancerTypeByName(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/load_balancer_types")
+                UrlBuilder.from("%s/load_balancer_types".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 LoadBalancerTypesResponse.class);
@@ -1380,7 +1380,7 @@ public class HetznerCloudAPI {
      * @return LoadBalancerTypeResponse
      */
     public LoadBalancerTypeResponse getLoadBalancerType(long id) {
-        return get(String.format("%s/load_balancer_types/%s", apiUrl, id), LoadBalancerTypeResponse.class);
+        return get("%s/load_balancer_types/%s".formatted(apiUrl, id), LoadBalancerTypeResponse.class);
     }
 
     /**
@@ -1391,7 +1391,7 @@ public class HetznerCloudAPI {
      */
     public ServerTypesResponse getServerTypeByName(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/server_types")
+                UrlBuilder.from("%s/server_types".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 ServerTypesResponse.class);
@@ -1405,7 +1405,7 @@ public class HetznerCloudAPI {
      */
     public ServerTypeResponse getServerType(long id) {
         return get(
-                apiUrl + "/server_types/" + id,
+                "%s/server_types/%s".formatted(apiUrl, id),
                 ServerTypeResponse.class);
     }
 
@@ -1416,7 +1416,7 @@ public class HetznerCloudAPI {
      */
     public LocationsResponse getLocations() {
         return get(
-                apiUrl + "/locations",
+                "%s/locations".formatted(apiUrl),
                 LocationsResponse.class);
     }
 
@@ -1428,7 +1428,7 @@ public class HetznerCloudAPI {
      */
     public LocationsResponse getLocationByName(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/locations")
+                UrlBuilder.from("%s/locations".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 LocationsResponse.class);
@@ -1442,7 +1442,7 @@ public class HetznerCloudAPI {
      */
     public LocationResponse getLocation(long id) {
         return get(
-                apiUrl + "/locations/" + id,
+                "%s/locations/%s".formatted(apiUrl, id),
                 LocationResponse.class);
     }
 
@@ -1518,7 +1518,7 @@ public class HetznerCloudAPI {
      */
     public ImagesResponse getImages(String labelSelector, Architecture architecture, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/images")
+                UrlBuilder.from("%s/images".formatted(apiUrl))
                         .queryParamIfPresent("label_selector", Optional.ofNullable(labelSelector))
                         .queryParamIfPresent("architecture", Optional.ofNullable(architecture))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
@@ -1546,7 +1546,7 @@ public class HetznerCloudAPI {
      */
     public ImagesResponse getImagesByType(ImageType type, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/images")
+                UrlBuilder.from("%s/images".formatted(apiUrl))
                         .queryParam("type", type.toString())
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -1562,7 +1562,7 @@ public class HetznerCloudAPI {
      */
     public ImagesResponse getImageByName(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/images")
+                UrlBuilder.from("%s/images".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 ImagesResponse.class);
@@ -1576,7 +1576,7 @@ public class HetznerCloudAPI {
      */
     public ImageResponse getImage(long id) {
         return get(
-                apiUrl + "/images/" + id,
+                "%s/images/%s".formatted(apiUrl, id),
                 ImageResponse.class);
     }
 
@@ -1589,7 +1589,7 @@ public class HetznerCloudAPI {
      */
     public ImageResponse updateImage(long id, UpdateImageRequest updateImageRequest) {
         return put(
-                apiUrl + "/images/" + id,
+                "%s/images/%s".formatted(apiUrl, id),
                 updateImageRequest,
                 ImageResponse.class);
     }
@@ -1604,7 +1604,7 @@ public class HetznerCloudAPI {
      */
     public String deleteImage(long id) {
         return delete(
-                apiUrl + "/images/" + id,
+                "%s/images/%s".formatted(apiUrl, id),
                 String.class);
     }
 
@@ -1646,7 +1646,7 @@ public class HetznerCloudAPI {
      */
     public VolumesResponse getVolumes(String labelSelector, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/volumes")
+                UrlBuilder.from("%s/volumes".formatted(apiUrl))
                         .queryParamIfPresent("label_selector", Optional.ofNullable(labelSelector))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -1662,7 +1662,7 @@ public class HetznerCloudAPI {
      */
     public VolumeResponse getVolume(long id) {
         return get(
-                apiUrl + "/volumes/" + id,
+                "%s/volumes/%s".formatted(apiUrl, id),
                 VolumeResponse.class);
     }
 
@@ -1676,7 +1676,7 @@ public class HetznerCloudAPI {
         if ((createVolumeRequest.getFormat() != null))
             createVolumeRequest.setFormat(createVolumeRequest.getFormat().toLowerCase());   // case-sensitive fix
         return post(
-                apiUrl + "/volumes",
+                "%s/volumes".formatted(apiUrl),
                 createVolumeRequest,
                 CreateVolumeResponse.class);
     }
@@ -1690,7 +1690,7 @@ public class HetznerCloudAPI {
      */
     public VolumeResponse updateVolume(long id, UpdateVolumeRequest updateVolumeRequest) {
         return put(
-                apiUrl + "/volumes/" + id,
+                "%s/volumes/%s".formatted(apiUrl, id),
                 updateVolumeRequest,
                 VolumeResponse.class);
     }
@@ -1703,7 +1703,7 @@ public class HetznerCloudAPI {
      */
     public String deleteVolume(long id) {
         return delete(
-                apiUrl + "/volumes/" + id,
+                "%s/volumes/%s".formatted(apiUrl, id),
                 String.class);
     }
 
@@ -1715,7 +1715,7 @@ public class HetznerCloudAPI {
      */
     public ActionsResponse getVolumeActions(long id) {
         return get(
-                apiUrl + "/volumes/" + id + "/actions",
+                "%s/volumes/%s/actions".formatted(apiUrl, id),
                 ActionsResponse.class);
     }
 
@@ -1728,7 +1728,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse attachVolumeToServer(long id, AttachVolumeRequest attachVolumeRequest) {
         return post(
-                apiUrl + "/volumes/" + id + "/actions/attach",
+                "%s/volumes/%s/actions/attach".formatted(apiUrl, id),
                 attachVolumeRequest,
                 ActionResponse.class);
     }
@@ -1741,7 +1741,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse detachVolume(long id) {
         return post(
-                apiUrl + "/volumes/" + id + "/actions/detach",
+                "%s/volumes/%s/actions/detach".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -1755,7 +1755,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse resizeVolume(long id, ResizeVolumeRequest resizeVolumeRequest) {
         return post(
-                apiUrl + "/volumes/" + id + "/actions/resize",
+                "%s/volumes/%s/actions/resize".formatted(apiUrl, id),
                 resizeVolumeRequest,
                 ActionResponse.class);
     }
@@ -1770,7 +1770,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeVolumeProtection(long id, ChangeProtectionRequest changeProtectionRequest) {
         return post(
-                apiUrl + "/volumes/" + id + "/actions/change_protection",
+                "%s/volumes/%s/actions/change_protection".formatted(apiUrl, id),
                 changeProtectionRequest,
                 ActionResponse.class);
     }
@@ -1813,7 +1813,7 @@ public class HetznerCloudAPI {
      */
     public NetworksResponse getNetworks(String labelSelector, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/networks")
+                UrlBuilder.from("%s/networks".formatted(apiUrl))
                         .queryParamIfPresent("label_selector", Optional.ofNullable(labelSelector))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -1829,7 +1829,7 @@ public class HetznerCloudAPI {
      */
     public NetworksResponse getNetworksByName(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/networks")
+                UrlBuilder.from("%s/networks".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 NetworksResponse.class);
@@ -1843,7 +1843,7 @@ public class HetznerCloudAPI {
      */
     public NetworkResponse getNetwork(long id) {
         return get(
-                apiUrl + "/networks/" + id,
+                "%s/networks/%s".formatted(apiUrl, id),
                 NetworkResponse.class);
     }
 
@@ -1856,7 +1856,7 @@ public class HetznerCloudAPI {
      */
     public NetworkResponse updateNetwork(long id, UpdateNetworkRequest updateNetworkRequest) {
         return put(
-                apiUrl + "/networks/" + id,
+                "%s/networks/%s".formatted(apiUrl, id),
                 updateNetworkRequest,
                 NetworkResponse.class);
     }
@@ -1870,7 +1870,7 @@ public class HetznerCloudAPI {
      */
     public NetworkResponse createNetwork(CreateNetworkRequest createNetworkRequest) {
         return post(
-                apiUrl + "/networks",
+                "%s/networks".formatted(apiUrl),
                 createNetworkRequest,
                 NetworkResponse.class);
     }
@@ -1883,7 +1883,7 @@ public class HetznerCloudAPI {
      */
     public String deleteNetwork(long id) {
         return delete(
-                apiUrl + "/networks/" + id,
+                "%s/networks/%s".formatted(apiUrl, id),
                 String.class);
     }
 
@@ -1896,7 +1896,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse attachServerToNetwork(long id, AttachServerToNetworkRequest attachServerToNetworkRequest) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/attach_to_network",
+                "%s/servers/%s/actions/attach_to_network".formatted(apiUrl, id),
                 attachServerToNetworkRequest,
                 ActionResponse.class);
     }
@@ -1911,7 +1911,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse detachServerFromNetwork(long id, DetachServerFromNetworkRequest detachServerFromNetworkRequest) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/detach_from_network",
+                "%s/servers/%s/actions/detach_from_network".formatted(apiUrl, id),
                 detachServerFromNetworkRequest,
                 ActionResponse.class);
     }
@@ -1925,7 +1925,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeAliasIPsOfNetwork(long id, ChangeAliasIPsofNetworkRequest changeAliasIPsofNetworkRequest) {
         return post(
-                apiUrl + "/servers/" + id + "/actions/change_alias_ips",
+                "%s/servers/%s/actions/change_alias_ips".formatted(apiUrl, id),
                 changeAliasIPsofNetworkRequest,
                 ActionResponse.class);
     }
@@ -1939,7 +1939,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeNetworkProtection(long id, ChangeProtectionRequest changeProtection) {
         return post(
-                apiUrl + "/networks/" + id + "/actions/change_protection",
+                "%s/networks/%s/actions/change_protection".formatted(apiUrl, id),
                 changeProtection,
                 ActionResponse.class);
     }
@@ -1952,7 +1952,7 @@ public class HetznerCloudAPI {
      */
     public ActionsResponse getNetworkActions(long id) {
         return get(
-                apiUrl + "/networks/" + id + "/actions",
+                "%s/networks/%s/actions".formatted(apiUrl, id),
                 ActionsResponse.class);
     }
 
@@ -1965,7 +1965,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse addSubnetToNetwork(long id, AddSubnetToNetworkRequest addSubnetToNetworkRequest) {
         return post(
-                apiUrl + "/networks/" + id + "/actions/add_subnet",
+                "%s/networks/%s/actions/add_subnet".formatted(apiUrl, id),
                 addSubnetToNetworkRequest,
                 ActionResponse.class);
     }
@@ -1979,7 +1979,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse deleteSubnetFromNetwork(long id, DeleteSubnetFromNetwork deleteSubnetFromNetwork) {
         return post(
-                apiUrl + "/networks/" + id + "/actions/delete_subnet",
+                "%s/networks/%s/actions/delete_subnet".formatted(apiUrl, id),
                 deleteSubnetFromNetwork,
                 ActionResponse.class);
     }
@@ -1993,7 +1993,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse addRouteToNetwork(long id, NetworkRouteRequest networkRouteRequest) {
         return post(
-                apiUrl + "/networks/" + id + "/actions/add_route",
+                "%s/networks/%s/actions/add_route".formatted(apiUrl, id),
                 networkRouteRequest,
                 ActionResponse.class);
     }
@@ -2007,7 +2007,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse deleteRouteFromNetwork(long id, NetworkRouteRequest networkRouteRequest) {
         return post(
-                apiUrl + "/networks/" + id + "/actions/delete_route",
+                "%s/networks/%s/actions/delete_route".formatted(apiUrl, id),
                 networkRouteRequest,
                 ActionResponse.class);
     }
@@ -2022,7 +2022,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeIPRangeOfNetwork(long id, ChangeIPRangeOfNetwork changeIPRangeOfNetwork) {
         return post(
-                apiUrl + "/networks/" + id + "/actions/change_ip_range",
+                "%s/networks/%s/actions/change_ip_range".formatted(apiUrl, id),
                 changeIPRangeOfNetwork,
                 ActionResponse.class);
     }
@@ -2044,7 +2044,7 @@ public class HetznerCloudAPI {
      */
     public CertificatesResponse getCertificates(PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/certificates")
+                UrlBuilder.from("%s/certificates".formatted(apiUrl))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
                         .toUri(),
@@ -2072,7 +2072,7 @@ public class HetznerCloudAPI {
      */
     public CertificatesResponse getCertificates(String labelSelector, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/certificates")
+                UrlBuilder.from("%s/certificates".formatted(apiUrl))
                         .queryParam("label_selector", labelSelector)
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -2088,7 +2088,7 @@ public class HetznerCloudAPI {
      */
     public CertificatesResponse getCertificate(String name) {
         return get(
-                UrlBuilder.from(apiUrl + "/certificates")
+                UrlBuilder.from("%s/certificates".formatted(apiUrl))
                         .queryParam("name", name)
                         .toUri(),
                 CertificatesResponse.class);
@@ -2102,7 +2102,7 @@ public class HetznerCloudAPI {
      */
     public CertificateResponse getCertificate(long id) {
         return get(
-                apiUrl + "/certificates/" + id,
+                "%s/certificates/%s".formatted(apiUrl, id),
                 CertificateResponse.class);
     }
 
@@ -2114,7 +2114,7 @@ public class HetznerCloudAPI {
      */
     public CertificateResponse createCertificate(CreateCertificateRequest createCertificateRequest) {
         return post(
-                apiUrl + "/certificates",
+                "%s/certificates".formatted(apiUrl),
                 createCertificateRequest,
                 CertificateResponse.class);
     }
@@ -2132,7 +2132,7 @@ public class HetznerCloudAPI {
      */
     public CertificateResponse updateCertificate(long id, UpdateCertificateRequest updateCertificateRequest) {
         return put(
-                apiUrl + "/certificates/" + id,
+                "%s/certificates/%s".formatted(apiUrl, id),
                 updateCertificateRequest,
                 CertificateResponse.class);
     }
@@ -2148,7 +2148,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse retryCertificate(long id) {
         return post(
-                apiUrl + "/certificates/" + id + "/actions/retry",
+                "%s/certificates/%s/actions/retry".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -2160,7 +2160,7 @@ public class HetznerCloudAPI {
      */
     public String deleteCertificate(long id) {
         return delete(
-                apiUrl + "/certificates/" + id,
+                "%s/certificates/%s".formatted(apiUrl, id),
                 String.class);
     }
 
@@ -2180,7 +2180,7 @@ public class HetznerCloudAPI {
      */
     public LoadBalancersResponse getLoadBalancerByName(String name) {
         return get(
-            UrlBuilder.from(apiUrl + "/load_balancers")
+            UrlBuilder.from("%s/load_balancers".formatted(apiUrl))
                     .queryParam("name", name)
                     .toUri(),
             LoadBalancersResponse.class);
@@ -2205,7 +2205,7 @@ public class HetznerCloudAPI {
      */
     public LoadBalancersResponse getLoadBalancers(String labelSelector, PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/load_balancers")
+                UrlBuilder.from("%s/load_balancers".formatted(apiUrl))
                         .queryParamIfPresent("label_selector", Optional.ofNullable(labelSelector))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
@@ -2221,7 +2221,7 @@ public class HetznerCloudAPI {
      */
     public LoadBalancerResponse getLoadBalancer(long id) {
         return get(
-                apiUrl + "/load_balancers/" + id,
+                "%s/load_balancers/%s".formatted(apiUrl, id),
                 LoadBalancerResponse.class);
     }
 
@@ -2233,7 +2233,7 @@ public class HetznerCloudAPI {
      */
     public LoadBalancerResponse createLoadBalancer(CreateLoadBalancerRequest createLoadBalancerRequest) {
         return post(
-                apiUrl + "/load_balancers",
+                "%s/load_balancers".formatted(apiUrl),
                 createLoadBalancerRequest,
                 LoadBalancerResponse.class);
     }
@@ -2247,7 +2247,7 @@ public class HetznerCloudAPI {
      */
     public LoadBalancerResponse updateLoadBalancer(long id, UpdateLoadBalancerRequest updateLoadBalancerRequest) {
         return put(
-                apiUrl + "/load_balancers/" + id,
+                "%s/load_balancers/%s".formatted(apiUrl, id),
                 updateLoadBalancerRequest,
                 LoadBalancerResponse.class);
     }
@@ -2260,7 +2260,7 @@ public class HetznerCloudAPI {
      */
     public String deleteLoadBalancer(long id) {
         return delete(
-                apiUrl + "/load_balancers/" + id,
+                "%s/load_balancers/%s".formatted(apiUrl, id),
                 String.class);
     }
 
@@ -2272,7 +2272,7 @@ public class HetznerCloudAPI {
      */
     public ActionsResponse getLoadBalancerActions(long id) {
         return get(
-                apiUrl + "/load_balancers/" + id + "/actions",
+                "%s/load_balancers/%s/actions".formatted(apiUrl, id),
                 ActionsResponse.class);
     }
 
@@ -2285,7 +2285,7 @@ public class HetznerCloudAPI {
      */
     public LoadBalancerResponse addServiceToLoadBalancer(long id, LBServiceRequest lbServiceRequest) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/add_service",
+                "%s/load_balancers/%s/actions/add_service".formatted(apiUrl, id),
                 lbServiceRequest,
                 LoadBalancerResponse.class);
     }
@@ -2299,7 +2299,7 @@ public class HetznerCloudAPI {
      */
     public LoadBalancerResponse updateServiceOfLoadBalancer(long id, LBServiceRequest lbServiceRequest) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/update_service",
+                "%s/load_balancers/%s/actions/update_service".formatted(apiUrl, id),
                 lbServiceRequest,
                 LoadBalancerResponse.class);
     }
@@ -2313,7 +2313,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse deleteServiceOfLoadBalancer(long id, long listenPort) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/delete_service",
+                "%s/load_balancers/%s/actions/delete_service".formatted(apiUrl, id),
                 new LoadBalancerDeleteServiceRequest(listenPort),
                 ActionResponse.class);
     }
@@ -2327,7 +2327,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse addTargetToLoadBalancer(long id, LBTargetRequest lbTargetRequest) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/add_target",
+                "%s/load_balancers/%s/actions/add_target".formatted(apiUrl, id),
                 lbTargetRequest,
                 ActionResponse.class);
     }
@@ -2341,7 +2341,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse removeTargetFromLoadBalancer(long id, LBTargetRequest lbTargetRequest) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/remove_target",
+                "%s/load_balancers/%s/actions/remove_target".formatted(apiUrl, id),
                 lbTargetRequest,
                 ActionResponse.class);
     }
@@ -2355,7 +2355,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeAlgorithmOfLoadBalancer(long id, String algorithmType) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/change_algorithm",
+                "%s/load_balancers/%s/actions/change_algorithm".formatted(apiUrl, id),
                 new LoadBalancerChangeAlgorithmRequest(algorithmType),
                 ActionResponse.class);
     }
@@ -2370,7 +2370,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeTypeOfLoadBalancer(long id, String loadBalancerType) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/change_type",
+                "%s/load_balancers/%s/actions/change_type".formatted(apiUrl, id),
                 new LoadBalancerChangeTypeRequest(loadBalancerType),
                 ActionResponse.class);
     }
@@ -2384,7 +2384,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse attachNetworkToLoadBalancer(long id, LoadBalancerNetworkRequest request) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/attach_to_network",
+                "%s/load_balancers/%s/actions/attach_to_network".formatted(apiUrl, id),
                 request,
                 ActionResponse.class);
     }
@@ -2425,7 +2425,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse detachNetworkFromLoadBalancer(long id, long networkId) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/detach_from_network",
+                "%s/load_balancers/%s/actions/detach_from_network".formatted(apiUrl, id),
                 new LoadBalancerNetworkRequest(networkId),
                 ActionResponse.class);
     }
@@ -2438,7 +2438,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse enablePublicInterfaceOfLoadBalancer(long id) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/enable_public_interface",
+                "%s/load_balancers/%s/actions/enable_public_interface".formatted(apiUrl, id),
                 ActionResponse.class);
     }
 
@@ -2450,7 +2450,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse disablePublicInterfaceOfLoadBalancer(long id) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/disable_public_interface",
+                "%s/load_balancers/%s/actions/disable_public_interface".formatted(apiUrl, id),
 
                 ActionResponse.class);
     }
@@ -2464,7 +2464,7 @@ public class HetznerCloudAPI {
      */
     public ActionResponse changeProtectionOfLoadBalancer(long id, boolean delete) {
         return post(
-                apiUrl + "/load_balancers/" + id + "/actions/change_protection",
+                "%s/load_balancers/%s/actions/change_protection".formatted(apiUrl, id),
                 new LoadBalancerChangeProtectionRequest(delete),
                 ActionResponse.class);
     }
@@ -2477,7 +2477,7 @@ public class HetznerCloudAPI {
      */
     public PlacementGroupResponse getPlacementGroup(long id) {
         return get(
-                apiUrl + "/placement_groups/" + id,
+                "%s/placement_groups/%s".formatted(apiUrl, id),
                 PlacementGroupResponse.class);
     }
 
@@ -2498,7 +2498,7 @@ public class HetznerCloudAPI {
      */
     public PlacementGroupsResponse getPlacementGroups(PaginationParameters paginationParameters) {
         return get(
-                UrlBuilder.from(apiUrl + "/placement_groups")
+                UrlBuilder.from("%s/placement_groups".formatted(apiUrl))
                         .queryParamIfPresent("page", Optional.ofNullable(paginationParameters.page))
                         .queryParamIfPresent("per_page", Optional.ofNullable(paginationParameters.perPage))
                         .toUri(),
@@ -2512,7 +2512,7 @@ public class HetznerCloudAPI {
      * @return PlacementGroupsResponse
      */
     public PlacementGroupsResponse getPlacementGroup(String name) {
-        UrlBuilder builder = UrlBuilder.from(apiUrl + "/placement_groups")
+        UrlBuilder builder = UrlBuilder.from("%s/placement_groups".formatted(apiUrl))
                 .queryParam("name", name);
 
         return get(
@@ -2527,7 +2527,7 @@ public class HetznerCloudAPI {
      * @return PlacementGroupsResponse
      */
     public PlacementGroupsResponse getPlacementGroups(String labelSelector) {
-        UrlBuilder builder = UrlBuilder.from(apiUrl + "/placement_groups")
+        UrlBuilder builder = UrlBuilder.from("%s/placement_groups".formatted(apiUrl))
                 .queryParam("label_selector", labelSelector);
 
         return get(
@@ -2543,7 +2543,7 @@ public class HetznerCloudAPI {
      */
     public PlacementGroupsResponse getPlacementGroup(PlacementGroupType type) {
         return get(
-                UrlBuilder.from(apiUrl + "/placement_groups").queryParam("type", type.toString()).toUri(),
+                UrlBuilder.from("%s/placement_groups".formatted(apiUrl)).queryParam("type", type.toString()).toUri(),
                 PlacementGroupsResponse.class);
     }
 
@@ -2555,7 +2555,7 @@ public class HetznerCloudAPI {
      */
     public PlacementGroupResponse createPlacementGroup(CreatePlacementGroupRequest placementGroupRequest) {
         return post(
-                apiUrl + "/placement_groups",
+                "%s/placement_groups".formatted(apiUrl),
                 placementGroupRequest,
                 PlacementGroupResponse.class);
     }
@@ -2568,7 +2568,7 @@ public class HetznerCloudAPI {
      */
     public String deletePlacementGroup(long id) {
         return delete(
-                apiUrl + "/placement_groups/" + id,
+                "%s/placement_groups/%s".formatted(apiUrl, id),
                 String.class);
     }
 
